--- a/client/.jshintrc
+++ b/client/.jshintrc
@@ -3,7 +3,7 @@
   "browser": true,
   "esnext": true,
   "bitwise": true,
-  "camelcase": true,
+  "camelcase": false,
   "curly": true,
   "eqeqeq": true,
   "immed": true,
@@ -21,6 +21,9 @@
   "globals": {
     "jQuery": true,
     "angular": true,
+    "alert": true,
+    "FB": true,
+    "confirm": true,
     "console": true,
     "$": true,
     "_": true,
